--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
 
     // Declare HERE the dependencies for any other desired Firebase products
+    implementation 'com.google.firebase:firebase-auth' // Authentication
 
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
