--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,11 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Tindergree"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ProfilePageActivity"></activity>
+        <activity android:name=".OtherPicsActivity"></activity>
+        <activity android:name=".ProfilePageActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".ChatActivity" />
-        <activity android:name=".DisplayChatsActivity"/>
+        <activity android:name=".DisplayChatsActivity" />
         <activity android:name=".SwipeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
