--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,10 @@ dependencies {
 
     // Declare HERE the dependencies for any other desired Firebase products
     implementation 'com.google.firebase:firebase-auth' // Authentication
+    implementation 'com.google.firebase:firebase-storage' // Cloud Storage
+
+    // Image Compressor
+    implementation 'id.zelory:compressor:2.1.1'
 
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
