Modified transition to slide from PostRegisterUserDetails to SwipeActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,8 +21,8 @@
         <activity android:name=".Activities.LoginActivity" />
         <activity android:name=".Activities.ChatActivity" />
         <activity android:name=".Activities.DisplayChatsActivity" />
-        <activity android:name=".Activities.PostRegisterUserDetails" />
-        <activity android:name=".Activities.PostRegisterUploadPhotos">
+        <activity android:name=".Activities.PostRegisterUploadPhotos" />
+        <activity android:name=".Activities.PostRegisterUserDetails">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
