Modified transition slide from RegisterUploadPhotosActivity to RegisterDetails and vice-versa

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,12 +17,12 @@
         <activity android:name=".Activities.SettingsActivity" />
         <activity android:name=".Activities.OtherPicsActivity" />
         <activity android:name=".Activities.MatchesProfilePageActivity" />
-        <activity android:name=".Activities.RegisterActivity" />
+        <activity android:name=".Activities.PostRegisterUserDetails" />
         <activity android:name=".Activities.LoginActivity" />
         <activity android:name=".Activities.ChatActivity" />
         <activity android:name=".Activities.DisplayChatsActivity" />
         <activity android:name=".Activities.PostRegisterUploadPhotos" />
-        <activity android:name=".Activities.PostRegisterUserDetails">
+        <activity android:name=".Activities.RegisterActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
