Updated progressbar design

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ local.properties
 /dir/auth_export/config.json
 /dir/firebase-export-metadata.json
 /dir/firestore_export/firestore_export.overall_export_metadata
+firestore.rules
+firestore.indexes.json
