--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         <activity android:name=".Activities.PostRegisterUserDetails" />
         <activity android:name=".Activities.LoginActivity" />
         <activity android:name=".Activities.ChatActivity" />
-        <activity android:name=".Activities.DisplayChatsActivity" />
+        <activity android:name=".Activities.SwipeActivity" />
         <activity android:name=".Activities.PostRegisterUploadPhotos" />
         <activity android:name=".Activities.RegisterActivity">
 <!--            <intent-filter>-->
@@ -37,7 +37,7 @@
 <!--                <category android:name="android.intent.category.LAUNCHER" />-->
 <!--            </intent-filter>-->
         </activity>
-        <activity android:name=".Activities.SwipeActivity">
+        <activity android:name=".Activities.DisplayChatsActivity">
              <intent-filter>
              <action android:name="android.intent.action.MAIN" />
              <category android:name="android.intent.category.LAUNCHER" />
